updates server deps